# CareerPathwayMatrix

./: .replit  INSTRUCTIONS.md  README.md  UX_PLAN.md  ai_roadmap.py  app.py  app_clean.py  app_fixed.py  app_simplified.py  auth.py  data.py  database.py  engineering_careers.py  engineering_data_collector.py  engineering_integration.py  job_postings.py  job_postings_merged.py  openai_usage.json  pyproject.toml  rate_limiter.py  recommendations.py  roadmaps.py  simplerData.py  skill_graph.py  skill_graph.py.backup  skill_graph.py.bak2  skill_pathway.py  skill_roadmap_functions.py  skill_tree.py  skills_analysis.py  user_auth.py  utils.py  video_storyboard.md  visualizations.py
.streamlit/: config.toml  secrets.toml  user_db.json
attached_assets/: Pasted--Streamlit-App-Instructions-Career-Pathway-2x2-Matrix-Visualization-Tool-Here-are-comprehensive-i-1746550114242.txt  Pasted-Diagnosing-Tab-Mismatch-I-m-currently-investigating-a-discrepancy-in-my-Streamlit-app-The-tab-labe-1747702664718.txt  Pasted-Hi-I-want-to-tell-you-a-little-bit-about-this-service-I-m-setting-up-called-Career-Path-Navigator--1747765749661.txt  Pasted-I-ll-create-the-comprehensive-dataset-with-sources-for-each-metric-as-requested-Given-the-complexit-1746550145640.txt  Pasted-User-authentication-and-information-Personalizing-your-app-for-your-users-is-a-great-way-to-make-you-1747787744405.txt  Pasted-chart-Specify-the-dimensions-of-the-chart-const-width-928-const-height-680--1746563082745.txt  content-1747696205077.md  content-1747696205807.md  content-1747697109507.md  content-1747805957543.md  (+5 more)
(+1 files in other folders)
