[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.50.0",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "numpy>=2.2.5",
    "openai>=1.77.0",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "psycopg2-binary>=2.9.10",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "pyvis>=0.3.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.40",
    "streamlit-chat>=0.1.1",
    "streamlit>=1.45.0",
    "trafilatura>=2.0.0",
]
